<resources>
    <string name="app_name">JustMove</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travel">Travel</string>
    <string name="myTravels">My Travels</string>
    <string name="google_maps_key">AIzaSyCxmzafpnNPsNtMVuG5mjU5e4O37hBfFeI</string>
    <string name="go">GO!</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="timer">Timer</string>
    <string name="text_timer">text_timer</string>
    <string name="text_distance">text_distance</string>
    <string name="text_steps">STEPS</string>
    <string name="text_steps_map">text_steps</string>
    <string name="stop">Stop</string>
    <string name="statistics">Statistics</string>
    <string name="chronoInitialString">00:00:00</string>
    <string name="save_new_travel">Save new travel</string>
    <string name="saveBtnDialog">Save</string>
    <string name="travel_name">Travel Name</string>
    <string name="total_of_steps_stat">0</string>
    <string name="total_of_time_stat">00:00:00</string>
    <string name="total_of_distance_stat">0.0</string>
    <string name="load_travel">Load Travel</string>
    <string name="delete_travel">Delete Travel</string>

    <string name="detail_travel_name">name</string>
    <string name="detail_n_steps">1234</string>
    <string name="detail_distance">1234</string>
    <string name="detail_time">00:00:00</string>
    <string name="detail_publibike">No</string>

    <string name="steps_tab">STEPS</string>
    <string name="distance_tab">DISTANCE</string>
    <string name="time_tab">DURATION</string>
</resources>